Fix attribute section not showing up

--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ body {
 
 .container {
   display: flex;
-  height: 100%;
+  height: 95%;
   width: 100%;
   align-items: center;
   justify-content: center;
@@ -97,7 +97,6 @@ body {
 .attribute {
   color: white;
   font-size: 15px;
-  margin: 20px;
   font-size: 16px;
   text-align: center;
 }
